@@ -1,18 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-	<key>BuildVersion</key>
-	<string>1</string>
-	<key>CFBundleShortVersionString</key>
-	<string>2.5alpha0</string>
-	<key>CFBundleVersion</key>
-	<string>2.5alpha0</string>
-	<key>ProjectName</key>
-	<string>Python</string>
-	<key>ReleaseStatus</key>
-	<string>alfa</string>
-	<key>SourceVersion</key>
-	<string>2.4a0</string>
-</dict>
-</plist>
